// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly in basic form 1`] = `
.c0 {
  width: 1.5rem;
  height: 1.5rem;
}

.c0 path {
  fill: #e6e6e6;
}

<div>
  <svg
    class="c0"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
    />
  </svg>
</div>
`;

exports[`renders correctly when active 1`] = `
.c0 {
  width: 1.5rem;
  height: 1.5rem;
}

.c0 path {
  fill: gold;
}

<div>
  <svg
    class="c0"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
    />
  </svg>
</div>
`;

exports[`sizes renders correctly for a select with size large 1`] = `
.c0 {
  width: 1.5rem;
  height: 1.5rem;
}

.c0 {
  width: 3rem;
  height: 3rem;
}

.c0 path {
  fill: #e6e6e6;
}

<div>
  <svg
    class="c0"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
    />
  </svg>
</div>
`;

exports[`sizes renders correctly for a select with size medium 1`] = `
.c0 {
  width: 1.5rem;
  height: 1.5rem;
}

.c0 {
  width: 2rem;
  height: 2rem;
}

.c0 path {
  fill: #e6e6e6;
}

<div>
  <svg
    class="c0"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
    />
  </svg>
</div>
`;

exports[`sizes renders correctly for a select with size small 1`] = `
.c0 {
  width: 1.5rem;
  height: 1.5rem;
}

.c0 {
  width: 1rem;
  height: 1rem;
}

.c0 path {
  fill: #e6e6e6;
}

<div>
  <svg
    class="c0"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
    />
  </svg>
</div>
`;
